--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        <div class="left-container">
            <div class="icons">
             <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/nishant-sengar-768433253?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>
             <i class="fa-brands fa-github"></i>
             <i class="fa-brands fa-twitter"></i>
            </div>
@@ -91,19 +91,19 @@
             <div>
                 <i class="fa-solid fa-code"></i>
                 <h2>Web Design</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo itaque ducimus dolor earum sit incidunt quos pariatur voluptas iste libero.</p>
+                <p>"Developed a responsive personal portfolio website using HTML, CSS, and JavaScript. Showcases projects, skills, and contact details with a clean and modern UI."</p>
                 <a href="#">Learn more</a>
             </div>
             <div>
                 <i class="fa-solid fa-crop"></i>
                 <h2>UI/UX Design</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo itaque ducimus dolor earum sit incidunt quos pariatur voluptas iste libero.</p>
+                <p>"Designed a dynamic website with HTML, CSS, and JavaScript, focusing on performance optimization and a seamless user interface."</p>
                 <a href="#">Learn more</a>
             </div>
             <div>
                 <i class="fa-brands fa-app-store-ios"></i>
                 <h2>App Design</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo itaque ducimus dolor earum sit incidunt quos pariatur voluptas iste libero.</p>
+                <p>"Developed a responsive web application using React, Node.js, and MongoDB. Implemented user authentication and real-time data updates with efficient API integration."</p>
                 <a href="#">Learn more</a>
             </div>
         </div>    
@@ -118,7 +118,7 @@
                 <img src="images/ml.jpg">
                 <div class="layer">
                     <h3>Music App</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex fugiat quisquam impedit a deleniti iusto.</p>
+                    <p>"Developed a full-featured music streaming app using React Native and Firebase. Integrated real-time music playback, user playlists, and a search feature for tracks and artists. Ensured a responsive UI and smooth user experience across devices."</p>
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                 <img src="images/IMG_20241114_234110.jpg" >
                 <div class="layer">
                     <h3>Web Development</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex fugiat quisquam impedit a deleniti iusto.</p>
+                    <p>"Developed a responsive personal portfolio website using HTML, CSS, and JavaScript. Showcases projects, skills, and contact details with a clean and modern UI."</p>
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                 <img src="images/web.jpg">
                 <div class="layer">
                     <h3>Cancer Predection</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex fugiat quisquam impedit a deleniti iusto.</p>
+                    <p>"Developed a machine learning model for cancer prediction using Python, Scikit-Learn, and Pandas. Implemented data preprocessing, feature selection, and trained classifiers like Random Forest and SVM, achieving high accuracy in early detection."</p>
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
@@ -151,7 +151,7 @@
                 <h1 class="sub-title">Contact Me</h1>
                 <p><i class="fa-solid fa-paper-plane"></i>nishantsengar17@gmail.com</p>
                 <div class="social-icons">
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/nishant-sengar-768433253?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="#"><i class="fa-brands fa-github"></i></a>
                     <a href="#"><i class="fa-brands fa-discord"></i></i></a>
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
